--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name='viewport' content='width=device-width'>
         <title>Privacy Policy</title>
         <style>
-            body { font-family: 'Colibri', Helvetica, Arial, sans-serif; padding:1em; background-color: #333;}
-            h2, strong {color: #d2a846;}
-            p, li {color: #afafaf;}
-            a, a:visited {color: #d4be94;}
+            body { font-family: 'Colibri', Helvetica, Arial, sans-serif; padding:1em; background-image: url(BackgroundHUGE.png);}
+            h2, strong {color: #ffda76;}
+            p, li {color: #FFFFFF;}
+            a, a:visited {color: #ffda76;}
         </style>
     </head>
     <body>
