--- a/PatchNotesB1.0.2.html
+++ b/PatchNotesB1.0.2.html
@@ -14,28 +14,28 @@
     <body>
     <h2>Back Stabbers - Beta 1.0.2 :</h2>
     <p><strong>English:</strong></p>
-    <p>+ "+1" "-1" buttons in the Duel Settings become simple "+" and "-" buttons.
-+ "Speed - Strengh" display. In accordance with each character stats.
-+ "How To Play" tutorial now explains how to pause the game.
-+ New sound pitch for lifted throws.
-+ Canadian Map Reworked. When a goal is scored, the looser now gains a frozen wall.
-+ New "Left" "Right" buttons when the character has the disc
-+ Lift Reworked. More Gravity Added.
-+ New Frozen Goal Effect.
-+ Links to my social networks in the "About" Page.
-+ Minor Bug Fixes.
+        <p>+ "+1" "-1" buttons in the Duel Settings become simple "+" and "-" buttons.</br>
++ "Speed - Strengh" display. In accordance with each character stats.</br>
++ "How To Play" tutorial now explains how to pause the game.</br>
++ New sound pitch for lifted throws.</br>
++ Canadian Map Reworked. When a goal is scored, the looser now gains a frozen wall.</br>
++ New "Left" "Right" buttons when the character has the disc.</br>
++ Lift Reworked. More Gravity Added.</br>
++ New Frozen Goal Effect.</br>
++ Links to my social networks in the "About" Page.</br>
++ Minor Bug Fixes.</br>
 + French translation to the Google Play page (to avoid the automatic "totally accurate" google translation).</p>
     <p><strong>Français (French) :</strong></p>
-    <p>+ Les boutons "+1" "-1" dans la config d'un duel deviennent de simples boutons "+" et "-".
-+ L'affichage des statistiques "Speed - Strengh" se fait maintenant en accord avec les stats de chaque personnage
-+ Le tutotiel "How To Play" explique maintenant comment mettre le jeu en pause.
-+ Différent son pour les lifts.
-+ Terrain canadien retravaillé. Quand un but est marqué, le perdant gagne maintenant un but gelé.
-+ Nouveaux boutons "Gauche" "Droite" quand un personnage a le disque.
-+ Lift retravaillé. Ajout de gravité.
-+ Nouvel effet lors du gel d'un but.
-+ Ajout de liens vers mes réseaux sociaux dans la page "About".
-+ Corrections de petits bugs.
+    <p>+ Les boutons "+1" "-1" dans la config d'un duel deviennent de simples boutons "+" et "-".</br>
++ L'affichage des statistiques "Speed - Strengh" se fait maintenant en accord avec les stats de chaque personnage.</br>
++ Le tutotiel "How To Play" explique maintenant comment mettre le jeu en pause.</br>
++ Différent son pour les lifts.</br>
++ Terrain canadien retravaillé. Quand un but est marqué, le perdant gagne maintenant un but gelé.</br>
++ Nouveaux boutons "Gauche" "Droite" quand un personnage a le disque.</br>
++ Lift retravaillé. Ajout de gravité.</br>
++ Nouvel effet lors du gel d'un but.</br>
++ Ajout de liens vers mes réseaux sociaux dans la page "About".</br>
++ Corrections de petits bugs.</br>
 + Ajout d'une traduction en français de la page Google Play (pour éviter la traduction automatique "de précision").</p>
     </body>
     </html>
