--- a/PatchNotesB1.0.2.html
+++ b/PatchNotesB1.0.2.html
@@ -18,7 +18,7 @@
 + "Speed - Strengh" display. In accordance with each character stats.</br>
 + "How To Play" tutorial now explains how to pause the game.</br>
 + New sound pitch for lifted throws.</br>
-+ Canadian Map Reworked. When a goal is scored, the looser now gains a frozen wall.</br>
++ Canadian Map Reworked. When a goal is scored, the loser now gains a frozen wall.</br>
 + New "Left" "Right" buttons when the character has the disc.</br>
 + Lift Reworked. More Gravity Added.</br>
 + New Frozen Goal Effect.</br>
