--- a/PatchNotesB1.0.2.html
+++ b/PatchNotesB1.0.2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width'>
-        <title>Back Stabbers - Beta 1.0.2 :</title>
+        <title>Back Stabbers</title>
         <style>
             body { font-family: 'Colibri', Helvetica, Arial, sans-serif; padding:1em; background-image: url(BackgroundHUGE.png);}
             h2, strong {color: #ffda76;}
@@ -12,6 +12,7 @@
         </style>
     </head>
     <body>
+        <p><a href="main.html"><-Back</a></br></p>
     <h2>Back Stabbers - Beta 1.0.2 :</h2>
     <p><strong>English:</strong></p>
         <p>+ "+1" "-1" buttons in the Duel Settings become simple "+" and "-" buttons.</br>
@@ -37,5 +38,6 @@
 + Ajout de liens vers mes réseaux sociaux dans la page "About".</br>
 + Corrections de petits bugs.</br>
 + Ajout d'une traduction en français de la page Google Play (pour éviter la traduction automatique "de précision").</p>
+<p></br><a href="main.html"><-Back</a></p>
     </body>
     </html>
