--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="center-container">
-            <img src="ABJECT-BANNER-Transparent2.png" height="300px">
+            <img src="ABJECT-BANNER-Transparent2.png"  style="max-width: 100%; max-height: 300px;">
         </div>
         <div>
             <div>
