--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="center-container">
-            <img src="ABJECT-BANNER-Transparent2.png"  style="max-width: 100%; max-height: 300px;">
+            <img src="ABJECT-BANNER-Transparent2.png" style="max-width: 100%; max-height: 300px;">
         </div>
         <div>
             <div>
@@ -23,7 +23,8 @@
             </div>
             <div>
                 <h2>Patch Notes</strong></h2>
-                <p><a href="PatchNotesB1.0.2.html">Beta 1.0.2</a></p>
+                <p>September 21, 2019: <a href="PatchNotesB1.0.3.html">Beta 1.0.3</a></p>
+                <p>September 14, 2019: <a href="PatchNotesB1.0.2.html">Beta 1.0.2</a></p>
             </div>
         </div>
     </body>
